--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,9 @@ body {
   background-size: cover;
 
 }
+html {
+  zoom: 75%;
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
